# ProgramAnalysis

./: .gitignore  Milestone.md  README.md  pom.xml
docs/: 404.html  index.html  mkdocs.yml
docs/docs/: analysis-description.md  getting-started.md  index.md  valid-code.md
docs/docs/annotations/: arrays.md  index.md  numbers.md
docs/docs/examples/: annotation.md  binary-search.md  src_outputs
docs/docs/potential-errors/: AnnotationError.md  ArithmeticException.md  ArrayIndexOutOfBoundsException.md  ClassCastException.md  NegativeArraySizeException.md  NullPointerException.md
docs_src/: mkdocs.yml  pyproject.toml
docs_src/docs/: annotations.md  index.md
docs_src/docs/potential-errors/: ArithmeticException.md  ArrayIndexOutOfBoundsException.md  ClassCastException.md  NegativeArraySizeException.md  NullPointerException.md
lib/plantuml/plantuml-1.0/: maven-metadata-local.xml
lib/plantuml/plantuml-1.0/1.0/: plantuml-1.0-1.0.pom
src/: AstVisitor.java  JavaParserDemo.java
src/main/java/: ArithmeticExceptionExample.java  AstVisitor.java  JavaParserDemo.java  MethodCallExample.java
src/main/java/analysis/: AnalysisVisitor.java
src/main/java/logger/: AnalysisLogger.java
src/main/java/ui/: Main.java
src/main/java/utils/: AnnotationUtil.java  JavadocUtil.java  MathUtil.java  ResolverUtil.java  TypeUtil.java  ValueUtil.java  VariableUtil.java
src/main/java/visualization/: Diagram.java  DiagramNode.java  Error.java  ErrorType.java
src/test/java/analysis/: MethodCallTest.java
src/test/java/demo/: ArithmeticExceptionExample.java  AstVisitor.java  (+2 more)
(+85 files in other folders)
