[tool.poetry]
name = "project2-docs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "project2_docs"}]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
